--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     <title>Moshify</title>
 </head>
 <body>
+    <blockquote class="quote">
+        <p class="quote__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum nostrum natus corrupti commodi ipsam voluptatum labore ea dignissimos quasi rerum!</p>
+        <footer>
+            <div class="media">
+                <div class="media__image">
+                    <svg class="icon icon--primary quote__line">
+                        <use xlink:href="images/sprite.svg#line"></use>
+                    </svg>
+                </div>
+                <div class="media__body">
+                    <h3 class="media__title quote__author">John Smith</h3>
+                    <p class="quote__org">ABC Organisation Pvt. Ltd.</p>
+                </div>
+            </div>            
+        </footer>
+    </blockquote>
     
 </body>
 </html>
