--- a/index.html
+++ b/index.html
@@ -6,13 +6,361 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Moshify</title>
 </head>
 <body>
-   
+    <nav class="nav collapsible">
+        <a class="nav__brand" href="/"><img src="images/logo.png" alt=""></a>
+        <svg class="icon icon--white nav__toggler">
+            <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+            <li class="nav__item"><a href="#">Hosting</a></li>
+            <li class="nav__item"><a href="#">VPS</a></li>
+            <li class="nav__item"><a href="#">Domain</a></li>
+            <li class="nav__item"><a href="#">Pricing</a></li>
+        </ul>
+    </nav>
+    <section class="block block--dark block--skewed-left hero">
+        <div class="container grid grid--cols-2">
+            <header class="block__header hero__content"  data-aos="fade-right">
+                <h1 class="block__heading">Clour Hosting for Pros</h1>
+                <p class="hero__tagline">Deploy your websites in less than 60 Seconds.</p>
+                <a href="/" class="btn btn--accent btn--streched">Get Started</a>
+            </header>
+            <picture  data-aos="fade-left">
+                <source type="image/webp" srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
+                <source type="image/png" srcset="images/banner.png 1x, images/banner@2x 2x" />
+                <img class="hero__image" src="images/banner.png" alt="">
+            </picture>
+        </div>
+    </section>
+    <section class="block container block-domain">
+        <header class="block__header"  data-aos="fade-up">
+            <h2>Starting at $9 per month</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos nam et voluptatibus autem asperiores dolores dolorum vero architecto accusamus doloremque.</p>
+        </header>
+        <div class="input-group"> 
+            <input type="text" class="input" placeholder="Enter domain name here...">
+            <button class="btn btn--accent">
+                <svg class="icon icon--white btn--icon">
+                    <use xlink:href="images/sprite.svg#search"></use>
+                </svg>
+                Search
+            </button>
+        </div>
+        <ul class="list block-domain__prices">
+            <li><span class="badge badge--secondary">.com $9</span></li>
+            <li>.sg $10</li>
+            <li>.space $11</li>
+            <li>.info $14</li>
+            <li>.net $10</li>
+            <li>.xyz $13</li>
+        </ul>
+    </section>
+   <section class="block container block-plans">
+        <div class="grid grid--cols-3"  data-aos="fade-up">
+            <div class="plan">
+                <div class="card card--secondary">
+                    <header class="card__header">
+                       <h3 class="plan__name">Entry</h3>
+                       <span class="plan__price">$14</span>
+                       <span class="plan__billing-cycle">/Annual</span>
+                       <span class="badge badge--secondary badge--small">10% Off</span>
+                       <span class="plan__description">Easy start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited Websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB Ram</li>
+                        </ul>
+                        <button class="btn btn-outline btn--block">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="plan plan--popular">
+                <div class="card card--primary">
+                    <header class="card__header">
+                       <h3 class="plan__name">Entry</h3>
+                       <span class="plan__price">$14</span>
+                       <span class="plan__billing-cycle">/Annual</span>
+                       <span class="badge badge--primary badge--small">10% Off</span>
+                       <span class="plan__description">Easy start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited Websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB Ram</li>
+                        </ul>
+                        <button class="btn btn--primary btn--block">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="plan">
+                <div class="card card--secondary">
+                    <header class="card__header">
+                       <h3 class="plan__name">Entry</h3>
+                       <span class="plan__price">$14</span>
+                       <span class="plan__billing-cycle">/Annual</span>
+                       <span class="badge badge--secondary badge--small">10% Off</span>
+                       <span class="plan__description">Easy start on the cloud</span>
+                    </header>
+                    <div class="card__body">
+                        <ul class="list list--tick">
+                            <li class="list__item">Unlimited Websites</li>
+                            <li class="list__item">Unlimited Bandwidth</li>
+                            <li class="list__item">100 GB SSD Storage</li>
+                            <li class="list__item">3 GB Ram</li>
+                        </ul>
+                        <button class="btn btn-outline btn--block">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="block container">
+        <header class="block__header">
+            <h2>Host on the Cloud to Keep Growing</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, alias!</p>
+        </header>
+        <article class="grid grid--cols-2 feature">
+            <div class="feature__content"  data-aos="fade-right">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#easy"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">Super Easy to Use</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, beatae quia dicta consequuntur repellat iure. Harum modi natus quam deserunt.</p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture  data-aos="fade-in">
+                <source type="image/webp" srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
+                <source type="image/png" srcset="images/easy.png 1x, images/easy@2x 2x" />
+                <img class="feature__image" src="images/easy.png" alt="">
+            </picture>
+        </article>
+        <article class="grid grid--cols-2 feature">
+            <div class="feature__content"  data-aos="fade-left">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#computer"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">Simply Fast Websites</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, beatae quia dicta consequuntur repellat iure. Harum modi natus quam deserunt.</p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture  data-aos="fade-in">
+                <source type="image/webp" srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
+                <source type="image/png" srcset="images/fast.png 1x, images/fast@2x 2x" />
+                <img class="feature__image" src="images/fast.png" alt="">
+            </picture>
+        </article>
+        <article class="grid grid--cols-2 feature">
+            <div class="feature__content"  data-aos="fade-right">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#wordpress"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">Wordpress Made Easy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, beatae quia dicta consequuntur repellat iure. Harum modi natus quam deserunt.</p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture  data-aos="fade-in">
+                <source type="image/webp" srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
+                <source type="image/png" srcset="images/wordpress.png 1x, images/wordpress@2x 2x" />
+                <img class="feature__image" src="images/wordpress.png" alt="">
+            </picture>
+        </article>
+        <article class="grid grid--cols-2 feature">
+            <div class="feature__content"  data-aos="fade-left">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="images/sprite.svg#clock"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">24/7 Expert Support</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, beatae quia dicta consequuntur repellat iure. Harum modi natus quam deserunt.</p>
+                <a href="#" class="link-arrow">Learn More</a>
+            </div>
+            <picture  data-aos="fade-in">
+                <source type="image/webp" srcset="images/support.webp 1x, images/support@2x.webp 2x" />
+                <source type="image/png" srcset="images/support.png 1x, images/support@2x 2x" />
+                <img class="feature__image" src="images/support.png" alt="">
+            </picture>
+        </article>
+    </section>
+    <section class="block block--dark block--skewed-right block-showcase">
+        <header class="block__header">
+            <h2>User Friendly Control Panel</h2>
+        </header>
+        <div class="container grid grid--cols-2">
+            <picture class="block-showcase__image"  data-aos="slide-right">
+                <source type="image/webp" srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
+                <source type="image/png" srcset="images/ipad.png 1x, images/ipad@2x.png 2x" />
+                <img src="images/ipad.png" alt="An image of the ipad">
+            </picture>
+            <ul class="list"  data-aos="slide-up">
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="images/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Easy Start and Managed Updates</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iste aut repellat debitis exercitationem quisquam, velit quae deleniti mollitia voluptate.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>                  
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="images/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Dynamic Caching & More</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iste aut repellat debitis exercitationem quisquam, velit quae deleniti mollitia voluptate.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="images/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Staging, Git and WP-CLI</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium iste aut repellat debitis exercitationem quisquam, velit quae deleniti mollitia voluptate.</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="block">
+        <header class="block__header"  data-aos="fade-up">
+            <h2>What our Customers are Saying</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptas.</p>
+        </header>
+        <div class="container"  data-aos="fade-in">   
+            <div class="card testimonial" style="margin: 5rem;">
+                <div class="grid grid--cols-2">
+                    <div class="testimonial__image">
+                        <img src="images/testimonial.jpg" alt="A happy, smiling customer">
+                        <span class="icon-container icon-container--accent">
+                            <svg class="icon icon--white icon--small">
+                                <use xlink:href="images/sprite.svg#quotes"></use>
+                            </svg>
+                        </span>
+                    </div> 
+                    <blockquote class="quote">
+                        <p class="quote__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum nostrum natus corrupti commodi ipsam voluptatum labore ea dignissimos quasi rerum!</p>
+                        <footer>
+                            <div class="media">
+                                <div class="media__image">
+                                    <svg class="icon icon--primary quote__line">
+                                        <use xlink:href="images/sprite.svg#line"></use>
+                                    </svg>
+                                </div>
+                                <div class="media__body">
+                                    <h3 class="media__title quote__author">John Smith</h3>
+                                    <p class="quote__org">ABC Organisation Pvt. Ltd.</p>
+                                </div>
+                            </div>            
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="block block--dark footer"> 
+        <div class="container footer__sections grid">
+            <section class="collapsible footer-section collapsible--expanded">
+                <div class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Products</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="images/sprite.svg#chevron"></use>
+                    </svg>
+                </div>
+                <div class="collapsible__content">
+                    <ul class="list">
+                       <li><a href="#">Website Hosting</a></li>
+                       <li><a href="#">Free Automated Hosting</a></li>
+                       <li><a href="#">Migrators</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="collapsible footer-section">
+                <div class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Company</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="images/sprite.svg#chevron"></use>
+                    </svg>
+                </div>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Affiliates</a></li>
+                        <li><a href="#">Blogs</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="collapsible footer-section">
+                <div class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Support</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="images/sprite.svg#chevron"></use>
+                    </svg>
+                </div>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Knowledge Base</a></li>
+                        <li><a href="#">FAQs</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="collapsible footer-section">
+                <div class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Domains</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="images/sprite.svg#chevron"></use>
+                    </svg>
+                </div>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">Domain Checker</a></li>
+                        <li><a href="#">Domain Transfer</a></li>
+                        <li><a href="#">Free Domain</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer__brand">
+                <img src="images/logo.svg" alt="Moshify logo">
+                <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
+            </section>
+        </div>
+    </footer>
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
