--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </header>
             <picture  data-aos="fade-left">
                 <source type="image/webp" srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
-                <source type="image/png" srcset="images/banner.png 1x, images/banner@2x 2x" />
+                <source type="image/png" srcset="images/banner.png 1x, images/banner@2x.png 2x" />
                 <img class="hero__image" src="images/banner.png" alt="">
             </picture>
         </div>
