--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
-                <source type="image/png" srcset="images/easy.png 1x, images/easy@2x 2x" />
+                <source type="image/png" srcset="images/easy.png 1x, images/easy@2x.png 2x" />
                 <img class="feature__image" src="images/easy.png" alt="">
             </picture>
         </article>
@@ -161,7 +161,7 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
-                <source type="image/png" srcset="images/fast.png 1x, images/fast@2x 2x" />
+                <source type="image/png" srcset="images/fast.png 1x, images/fast@2x.png 2x" />
                 <img class="feature__image" src="images/fast.png" alt="">
             </picture>
         </article>
@@ -178,7 +178,7 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
-                <source type="image/png" srcset="images/wordpress.png 1x, images/wordpress@2x 2x" />
+                <source type="image/png" srcset="images/wordpress.png 1x, images/wordpress@2x.png 2x" />
                 <img class="feature__image" src="images/wordpress.png" alt="">
             </picture>
         </article>
@@ -195,7 +195,7 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/support.webp 1x, images/support@2x.webp 2x" />
-                <source type="image/png" srcset="images/support.png 1x, images/support@2x 2x" />
+                <source type="image/png" srcset="images/support.png 1x, images/support@2x.png 2x" />
                 <img class="feature__image" src="images/support.png" alt="">
             </picture>
         </article>
