--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
-                <source type="image/png" srcset="images/easy.png 1x, images/easy@2x.png 2x" />
-                <img class="feature__image" src="images/easy.png" alt="">
+                <source type="image/png" srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x" />
+                <img class="feature__image" src="images/easy.jpg" alt="">
             </picture>
         </article>
         <article class="grid grid--cols-2 feature">
