--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
-                <source type="image/png" srcset="images/fast.png 1x, images/fast@2x.png 2x" />
-                <img class="feature__image" src="images/fast.png" alt="">
+                <source type="image/png" srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x" />
+                <img class="feature__image" src="images/fast.jpg" alt="">
             </picture>
         </article>
         <article class="grid grid--cols-2 feature">
@@ -178,8 +178,8 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
-                <source type="image/png" srcset="images/wordpress.png 1x, images/wordpress@2x.png 2x" />
-                <img class="feature__image" src="images/wordpress.png" alt="">
+                <source type="image/png" srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x" />
+                <img class="feature__image" src="images/wordpress.jpg" alt="">
             </picture>
         </article>
         <article class="grid grid--cols-2 feature">
@@ -195,8 +195,8 @@
             </div>
             <picture  data-aos="fade-in">
                 <source type="image/webp" srcset="images/support.webp 1x, images/support@2x.webp 2x" />
-                <source type="image/png" srcset="images/support.png 1x, images/support@2x.png 2x" />
-                <img class="feature__image" src="images/support.png" alt="">
+                <source type="image/png" srcset="images/support.jpg 1x, images/support@2x.jpg 2x" />
+                <img class="feature__image" src="images/support.jpg" alt="">
             </picture>
         </article>
     </section>
